--- a/index.html
+++ b/index.html
@@ -2,16 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> 12.4 Obiekt XMLHttpRequest </title>
+    <title> Yahoo Weather Api </title>
     <link rel="Stylesheet" type="text/css" href="css/style.css"/>
 
   </head>
   <body>
-
-  	<button id="get-joke">Random joke!</button>
-  	<p id="joke"></p>
-  
-  	
+    <div class="main">
+      <div class="container">
+      	<div class="city" id="city-one"></div>
+        <div id="text-one"></div>
+        <div class="temp" id="temp-one"></div>
+        <div id="icon-one"></div>
+        <div id="link-one"></div>
+      </div>
+       <div class="container">
+        <div class="city"id="city-two"></div>
+        <div id="text-two"></div>
+        <div class="temp" id="temp-two"></div>
+        <div id="icon-two"></div>
+        <div id="link-two"></div>
+      </div>
+       <div class="container">
+        <div class="city" id="city-three"></div>
+        <div id="text-three"></div>
+        <div class="temp" id="temp-three"></div>
+        <div id="icon-three"></div>
+        <div id="link-three"></div>
+      </div> 	
+    </div>
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
